# olopad-tinypng

./: README.md  package-lock.json  package.json
scripts/: bump-version.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs
